# webgame

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: cd.yml  ci.yml  cicd.yml
src/: app.py  questions.py  quiz.py  ui.py  utils.py
tests/: mock_questions.py  test_quiz.py  test_utils.py
