[tool.poetry]
name = "webgame"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12.4"
streamlit = "^1.37.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pylint = "^3.2.6"
mypy = "^1.11.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.3"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["C0301","E203","E501"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"